# SystemMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  SystemMonitor  azure-pipelines.yml  imgui.ini
Documentation/: BuildInstructions.md
src/: DisplayInformation.cpp  DisplayInformation.h  Formatting.cpp  Formatting.h  Helper.cpp  Helper.h  SystemInformation.cpp  SystemInformation.h  main.cpp  test.cpp
